# EmotiCare

./: .gitignore  app.py  chatbot.py  emotion_detection.py  packages.txt  pyproject.toml  requirements.txt
.github/workflows/: ping.yml
tools/: youtube_tool.py
utils/: text_to_speech.py  voice_input.py  webrtc_logic.py
