[project]
name = "emoticare"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0.0",
    "gtts>=2.5.4",
    "h5py>=3.8",
    "langchain-core>=0.0.1",
    "langchain-groq>=0.0.1",
    "langgraph>=0.0.1",
    "numpy>=1.24",
    "ollama>=0.1.0",
    "opencv-python-headless>=4.7",
    "pyaudio>=0.2.11",
    "python-dotenv>=1.0",
    "speechrecognition>=3.8.1",
    "streamlit>=1.40",
    "streamlit-webrtc>=0.64.0",
    "tensorflow>=2.12",
]
